# CaptureStdoutRust

./: Cargo.toml
src/: main.rs
