[package]
name = "rust-pid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.29.0", features = ["ptrace", "process"] }
libc = "0.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3" 
